--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,7 +33,8 @@
         </li>
         <li class="login page">
             <div class="form">
-                <h1 style="color: #fff;">Chat Room</h1>
+                <h1>Chat Room</h1>
+                <h2>100% Free</h2>
                 <h3 class="title">What's your nickname?</h3>
 
                 <div>
