--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,6 +16,16 @@
         content="Join our interactive and user-friendly chat room application and connect with like-minded individuals from around the world. Share ideas, thoughts, and laughter in real-time with people from all around the world" />
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNBSRZ7SCJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PNBSRZ7SCJ');
+    </script>
 </head>
 
 <body>
